if(${USE_CUDA})
set_source_files_properties(concrete_experiment_tests.cc PROPERTIES LANGUAGE CUDA)
endif()
add_executable(sparsebase_experiment_concrete_experiment_tests.test concrete_experiment_tests.cc)
target_link_libraries(sparsebase_experiment_concrete_experiment_tests.test sparsebase)
target_link_libraries(sparsebase_experiment_concrete_experiment_tests.test gtest gtest_main)

add_test(NAME sparsebase_experiment_concrete_experiment_tests.test COMMAND sparsebase_experiment_concrete_experiment_tests.test)

if(${USE_CUDA})
    set_source_files_properties(experiment_helper_tests.cc PROPERTIES LANGUAGE CUDA)
endif()
add_executable(sparsebase_experiment_experiment_helper_tests.test experiment_helper_tests.cc)
target_link_libraries(sparsebase_experiment_experiment_helper_tests.test sparsebase)
target_link_libraries(sparsebase_experiment_experiment_helper_tests.test gtest gtest_main)

add_test(NAME sparsebase_experiment_experiment_helper_tests.test COMMAND sparsebase_experiment_experiment_helper_tests.test)
