
add_executable(sparsebase_format_format_tests.test format_tests.cc)
target_link_libraries(sparsebase_format_format_tests.test sparsebase)
target_link_libraries(sparsebase_format_format_tests.test gtest gtest_main)

add_test(NAME sparsebase_format_format_tests.test COMMAND sparsebase_format_format_tests.test)
