if(${USE_CUDA})
    set_source_files_properties(mtx_reader_tests.cc PROPERTIES LANGUAGE CUDA)
endif()
add_executable(sparsebase_io_mtx_reader_tests.test mtx_reader_tests.cc)
target_link_libraries(sparsebase_io_mtx_reader_tests.test  sparsebase)
target_link_libraries(sparsebase_io_mtx_reader_tests.test  gtest gtest_main)
add_test(NAME sparsebase_io_mtx_reader_tests.test COMMAND sparsebase_io_mtx_reader_tests.test)

if(${USE_CUDA})
    set_source_files_properties(pigo_mtx_reader_tests.cc PROPERTIES LANGUAGE CUDA)
endif()
add_executable(sparsebase_io_pigo_mtx_reader_tests.test pigo_mtx_reader_tests.cc)
target_link_libraries(sparsebase_io_pigo_mtx_reader_tests.test  sparsebase)
target_link_libraries(sparsebase_io_pigo_mtx_reader_tests.test  gtest gtest_main)
add_test(NAME sparsebase_io_pigo_mtx_reader_tests.test COMMAND sparsebase_io_pigo_mtx_reader_tests.test)

if(${USE_CUDA})
    set_source_files_properties(edge_list_reader_tests.cc PROPERTIES LANGUAGE CUDA)
endif()
add_executable(sparsebase_io_edge_list_reader_tests.test edge_list_reader_tests.cc)
target_link_libraries(sparsebase_io_edge_list_reader_tests.test  sparsebase)
target_link_libraries(sparsebase_io_edge_list_reader_tests.test  gtest gtest_main)
add_test(NAME sparsebase_io_edge_list_reader_tests.test COMMAND sparsebase_io_edge_list_reader_tests.test)

if(${USE_CUDA})
    set_source_files_properties(pigo_edge_list_reader_tests.cc PROPERTIES LANGUAGE CUDA)
endif()
add_executable(sparsebase_io_pigo_edge_list_reader_tests.test pigo_edge_list_reader_tests.cc)
target_link_libraries(sparsebase_io_pigo_edge_list_reader_tests.test  sparsebase)
target_link_libraries(sparsebase_io_pigo_edge_list_reader_tests.test  gtest gtest_main)
add_test(NAME sparsebase_io_pigo_edge_list_reader_tests.test COMMAND sparsebase_io_pigo_edge_list_reader_tests.test)

if(${USE_CUDA})
    set_source_files_properties(binary_reader_order_one_tests.cc PROPERTIES LANGUAGE CUDA)
endif()
add_executable(sparsebase_io_binary_reader_order_one_tests.test binary_reader_order_one_tests.cc)
target_link_libraries(sparsebase_io_binary_reader_order_one_tests.test  sparsebase)
target_link_libraries(sparsebase_io_binary_reader_order_one_tests.test  gtest gtest_main)
add_test(NAME sparsebase_io_binary_reader_order_one_tests.test COMMAND sparsebase_io_binary_reader_order_one_tests.test)

if(${USE_CUDA})
    set_source_files_properties(binary_reader_order_two_tests.cc PROPERTIES LANGUAGE CUDA)
endif()
add_executable(sparsebase_io_binary_reader_order_two_tests.test binary_reader_order_two_tests.cc)
target_link_libraries(sparsebase_io_binary_reader_order_two_tests.test  sparsebase)
target_link_libraries(sparsebase_io_binary_reader_order_two_tests.test  gtest gtest_main)
add_test(NAME sparsebase_io_binary_reader_order_two_tests.test COMMAND sparsebase_io_binary_reader_order_two_tests.test)

if(${USE_CUDA})
    set_source_files_properties(binary_writer_order_one_tests.cc PROPERTIES LANGUAGE CUDA)
endif()
add_executable(sparsebase_io_binary_writer_order_one_tests.test binary_writer_order_one_tests.cc)
target_link_libraries(sparsebase_io_binary_writer_order_one_tests.test  sparsebase)
target_link_libraries(sparsebase_io_binary_writer_order_one_tests.test  gtest gtest_main)
add_test(NAME sparsebase_io_binary_writer_order_one_tests.test COMMAND sparsebase_io_binary_writer_order_one_tests.test)

if(${USE_CUDA})
    set_source_files_properties(binary_writer_order_two_tests.cc PROPERTIES LANGUAGE CUDA)
endif()
add_executable(sparsebase_io_binary_writer_order_two_tests.test binary_writer_order_two_tests.cc)
target_link_libraries(sparsebase_io_binary_writer_order_two_tests.test  sparsebase)
target_link_libraries(sparsebase_io_binary_writer_order_two_tests.test  gtest gtest_main)
add_test(NAME sparsebase_io_binary_writer_order_two_tests.test COMMAND sparsebase_io_binary_writer_order_two_tests.test)

if(${USE_CUDA})
    set_source_files_properties(edge_list_writer_tests.cc PROPERTIES LANGUAGE CUDA)
endif()
add_executable(sparsebase_io_edge_list_writer_tests.test edge_list_writer_tests.cc)
target_link_libraries(sparsebase_io_edge_list_writer_tests.test  sparsebase)
target_link_libraries(sparsebase_io_edge_list_writer_tests.test  gtest gtest_main)
add_test(NAME sparsebase_io_edge_list_writer_tests.test COMMAND sparsebase_io_edge_list_writer_tests.test)

if(${USE_CUDA})
    set_source_files_properties(mtx_writer_tests.cc PROPERTIES LANGUAGE CUDA)
endif()
add_executable(sparsebase_io_mtx_writer_tests.test mtx_writer_tests.cc)
target_link_libraries(sparsebase_io_mtx_writer_tests.test  sparsebase)
target_link_libraries(sparsebase_io_mtx_writer_tests.test  gtest gtest_main)
add_test(NAME sparsebase_io_mtx_writer_tests.test COMMAND sparsebase_io_mtx_writer_tests.test)

if(${USE_CUDA})
    set_source_files_properties(metis_graph_reader_tests.cc PROPERTIES LANGUAGE CUDA)
endif()
add_executable(sparsebase_io_metis_graph_reader_tests.test metis_graph_reader_tests.cc)
target_link_libraries(sparsebase_io_metis_graph_reader_tests.test  sparsebase)
target_link_libraries(sparsebase_io_metis_graph_reader_tests.test  gtest gtest_main)
add_test(NAME sparsebase_io_metis_graph_reader_tests.test COMMAND sparsebase_io_metis_graph_reader_tests.test)

if(${USE_CUDA})
    set_source_files_properties(metis_graph_writer_tests.cc PROPERTIES LANGUAGE CUDA)
endif()
add_executable(sparsebase_io_metis_graph_writer_tests.test metis_graph_writer_tests.cc)
target_link_libraries(sparsebase_io_metis_graph_writer_tests.test  sparsebase)
target_link_libraries(sparsebase_io_metis_graph_writer_tests.test  gtest gtest_main)
add_test(NAME sparsebase_io_metis_graph_writer_tests.test COMMAND sparsebase_io_metis_graph_writer_tests.test)

if(${USE_CUDA})
    set_source_files_properties(patoh_reader_tests.cc PROPERTIES LANGUAGE CUDA)
endif()
add_executable(sparsebase_io_patoh_reader_tests.test patoh_reader_tests.cc)
target_link_libraries(sparsebase_io_patoh_reader_tests.test  sparsebase)
target_link_libraries(sparsebase_io_patoh_reader_tests.test  gtest gtest_main)
add_test(NAME sparsebase_io_patoh_reader_tests.test COMMAND sparsebase_io_patoh_reader_tests.test)

if(${USE_CUDA})
    set_source_files_properties(patoh_writer_tests.cc PROPERTIES LANGUAGE CUDA)
endif()
add_executable(sparsebase_io_patoh_writer_tests.test patoh_writer_tests.cc)
target_link_libraries(sparsebase_io_patoh_writer_tests.test  sparsebase)
target_link_libraries(sparsebase_io_patoh_writer_tests.test  gtest gtest_main)
add_test(NAME sparsebase_io_patoh_writer_tests.test COMMAND sparsebase_io_patoh_writer_tests.test)