
add_executable(preprocess_preprocess_tests.test preprocess_tests.cc)
target_link_libraries(preprocess_preprocess_tests.test sparsebase)
target_link_libraries(preprocess_preprocess_tests.test gtest gtest_main)

add_test(NAME preprocess_preprocess_tests.test COMMAND preprocess_preprocess_tests.test)
